<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/drawer_favorites"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/drawer_cards"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/cards" />
    </group>

    <item android:title="Version">
        <menu>
            <item
                android:icon="@mipmap/ic_launcher"
                android:title="1.21.1"/>
        </menu>
    </item>

    <item android:title="@string/action_settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never">
        <menu>
            <item
                android:icon="@mipmap/ic_launcher"
                android:title="1.21.1"/>
        </menu>
    </item>

</menu>
